Initial dev-dependencies

--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/stricter/stricter/issues"
   },
-  "homepage": "https://github.com/stricter/stricter#readme"
+  "homepage": "https://github.com/stricter/stricter#readme",
+  "devDependencies": {
+    "fuse-box": "^2.3.3",
+    "prettier": "^1.7.4",
+    "tslint": "^5.8.0",
+    "tslint-config-airbnb": "^5.3.0",
+    "typescript": "^2.5.3"
+  }
 }
