Add start and build commands, improved ignores, added application stub

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A project-wide js-linting tool",
   "main": "index.js",
   "scripts": {
+    "start": "node fuse.js",
+    "build": "cross-env NODE_ENV=production node fuse.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +23,7 @@
   },
   "homepage": "https://github.com/stricter/stricter#readme",
   "devDependencies": {
+    "cross-env": "^5.1.0",
     "fuse-box": "^2.3.3",
     "prettier": "^1.7.4",
     "tslint": "^5.8.0",
