--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/node": "^8.0.46",
         "cross-env": "^5.1.0",
         "fuse-box": "^2.3.3",
+        "fuse-box-typechecker": "git://github.com/fuse-box/fuse-box-typechecker",
         "prettier": "^1.7.4",
         "tslint": "^5.8.0",
         "tslint-config-airbnb": "^5.3.0",
