--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "type": "git",
         "url": "git+https://github.com/stricter/stricter.git"
     },
-    "keywords": ["lint", "project"],
+    "keywords": [
+        "lint",
+        "project"
+    ],
     "author": "Li0liQ",
     "license": "MIT",
     "bugs": {
@@ -20,11 +23,11 @@
     },
     "homepage": "https://github.com/stricter/stricter#readme",
     "devDependencies": {
+        "@types/chalk": "^2.2.0",
         "@types/node": "^8.0.46",
         "cross-env": "^5.1.0",
         "fuse-box": "^2.3.3",
-        "fuse-box-typechecker":
-            "git://github.com/fuse-box/fuse-box-typechecker",
+        "fuse-box-typechecker": "git://github.com/fuse-box/fuse-box-typechecker",
         "prettier": "^1.7.4",
         "tslint": "^5.8.0",
         "tslint-config-airbnb": "^5.3.0",
@@ -33,6 +36,7 @@
     },
     "dependencies": {
         "babylon": "^v7.0.0-beta.30",
+        "chalk": "^2.3.0",
         "cosmiconfig": "^3.1.0"
     }
 }
