--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - yarn global add greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 script:
+  - yarn lint
   - yarn build
   - yarn test
 after_script: greenkeeper-lockfile-upload
