--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "scripts": {
         "start": "node fuse.js",
         "build": "cross-env NODE_ENV=production node fuse.js",
+        "lint": "tslint .",
         "test": "jest"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/stricter/stricter.git"
     },
-    "keywords": ["lint", "project"],
+    "keywords": [
+        "lint",
+        "project"
+    ],
     "author": "Li0liQ",
     "license": "MIT",
     "bugs": {
@@ -24,7 +28,13 @@
             "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
         },
         "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-        "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"]
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json"
+        ]
     },
     "devDependencies": {
         "@types/chalk": "^2.2.0",
@@ -34,11 +44,12 @@
         "fuse-box": "^2.3.3",
         "fuse-box-typechecker": "git://github.com/fuse-box/fuse-box-typechecker",
         "jest": "^21.2.1",
-        "prettier": "^1.7.4",
+        "prettier": "^1.8.2",
         "ts-jest": "^21.2.1",
         "tslint": "^5.8.0",
         "tslint-config-airbnb": "^5.3.0",
         "tslint-config-prettier": "^1.6.0",
+        "tslint-plugin-prettier": "^1.3.0",
         "typescript": "^2.5.3"
     },
     "dependencies": {
