Add files to the package.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
     "name": "stricter",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "A project-wide js-linting tool",
-    "main": "index.js",
+    "main": "dist/stricter.js",
+    "files": [
+        "LICENSE",
+        "README.md",
+        "dist"
+    ],
     "scripts": {
         "start": "node fuse.js",
         "build": "cross-env NODE_ENV=production node fuse.js",
