Restructure add tests

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "transform": {
             "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
         },
-        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+        "testRegex": "(\\.|/)test\\.tsx?$",
         "moduleFileExtensions": [
             "ts",
             "tsx",
