--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "devDependencies": {
         "@types/chalk": "^2.2.0",
         "@types/jest": "^21.1.8",
-        "@types/node": "^8.0.53",
+        "@types/node": "^8.0.57",
         "cross-env": "^5.1.1",
         "fuse-box": "^2.4.0",
-        "fuse-box-typechecker": "git://github.com/fuse-box/fuse-box-typechecker",
+        "fuse-box-typechecker": "^2.6.3",
         "jest": "^21.2.1",
-        "prettier": "^1.8.2",
+        "prettier": "^1.9.1",
         "ts-jest": "^21.2.4",
         "tslint": "^5.8.0",
         "tslint-config-airbnb": "^5.4.2",
