--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
         "typescript": "^2.6.2"
     },
     "dependencies": {
-        "babylon": "^v7.0.0-beta.34",
+        "@babel/traverse": "7.0.0-beta.34",
+        "babylon": "^7.0.0-beta.34",
         "chalk": "^2.3.0",
         "cosmiconfig": "^3.1.0"
     },
