--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
   - yarn lint
   - yarn build
   - yarn test
+  - yarn report-coverage
 after_script: greenkeeper-lockfile-upload
 deploy:
   provider: npm
