--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "start": "node fuse.js",
         "build": "cross-env NODE_ENV=production node fuse.js",
         "lint": "tslint .",
-        "test": "jest"
+        "test": "jest",
+        "report-coverage": "coveralls < coverage/lcov.info"
     },
     "repository": {
         "type": "git",
@@ -43,7 +44,9 @@
             "js",
             "jsx",
             "json"
-        ]
+        ],
+        "collectCoverage": true,
+        "collectCoverageFrom" : ["src/**/*.ts"]
     },
     "devDependencies": {
         "@types/babel-types": "^7.0.0",
@@ -52,6 +55,7 @@
         "@types/commander": "^2.12.2",
         "@types/jest": "^22.0.1",
         "@types/node": "^8.5.7",
+        "coveralls": "^3.0.0",
         "cross-env": "^5.1.3",
         "fuse-box": "^3.0.2",
         "fuse-box-typechecker": "^2.7.0",
