--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "start": "node fuse.js",
         "build": "cross-env NODE_ENV=production node fuse.js",
-        "lint": "tslint .",
+        "lint": "tslint --project .",
         "test": "jest",
         "report-coverage": "coveralls < coverage/lcov.info"
     },
@@ -39,27 +39,27 @@
         "@types/chalk": "^2.2.0",
         "@types/commander": "^2.12.2",
         "@types/debug": "^0.0.30",
-        "@types/jest": "^22.1.2",
-        "@types/node": "^9.4.5",
+        "@types/jest": "^22.2.2",
+        "@types/node": "^9.6.0",
         "coveralls": "^3.0.0",
-        "cross-env": "^5.1.3",
+        "cross-env": "^5.1.4",
         "fuse-box": "^3.1.3",
         "fuse-box-typechecker": "^2.7.1",
-        "jest": "^22.2.2",
-        "prettier": "^1.10.2",
-        "ts-jest": "^22.0.4",
-        "ts-node": "^4.1.0",
+        "jest": "^22.4.3",
+        "prettier": "^1.11.1",
+        "ts-jest": "^22.4.2",
+        "ts-node": "^5.0.1",
         "tslint": "^5.9.1",
-        "tslint-config-airbnb": "^5.6.0",
-        "tslint-config-prettier": "^1.7.0",
+        "tslint-config-airbnb": "^5.8.0",
+        "tslint-config-prettier": "^1.10.0",
         "tslint-plugin-prettier": "^1.3.0",
-        "typescript": "^2.7.1"
+        "typescript": "^2.7.2"
     },
     "dependencies": {
-        "babylon": "^7.0.0-beta.39",
+        "babylon": "^7.0.0-beta.42",
         "babylon-walk": "^1.0.2",
-        "chalk": "^2.3.1",
-        "commander": "^2.14.1",
+        "chalk": "^2.3.2",
+        "commander": "^2.15.1",
         "cosmiconfig": "^4.0.0",
         "debug": "^3.1.0",
         "is-ci": "^1.1.0"
