--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
         "@types/chalk": "^2.2.0",
         "@types/commander": "^2.12.2",
         "@types/debug": "^0.0.30",
-        "@types/jest": "^23.1.1",
-        "@types/node": "^10.3.5",
-        "coveralls": "^3.0.1",
+        "@types/jest": "^23.1.3",
+        "@types/node": "^10.5.1",
+        "coveralls": "^3.0.2",
         "cross-env": "^5.2.0",
         "fuse-box": "^3.3.0",
         "fuse-box-typechecker": "^2.10.0",
-        "jest": "^23.1.0",
-        "prettier": "^1.13.5",
-        "ts-jest": "^22.4.6",
+        "jest": "^23.2.0",
+        "prettier": "^1.13.7",
+        "ts-jest": "^23.0.0",
         "ts-node": "^7.0.0",
         "tslint": "^5.10.0",
         "tslint-config-airbnb": "^5.9.2",
@@ -56,10 +56,10 @@
         "typescript": "^2.9.2"
     },
     "dependencies": {
-        "babylon": "^7.0.0-beta.47",
+        "@babel/parser": "^7.0.0-beta.51",
         "babylon-walk": "^1.0.2",
         "chalk": "^2.4.1",
-        "commander": "^2.15.1",
+        "commander": "^2.16.0",
         "cosmiconfig": "^4.0.0",
         "debug": "^3.1.0",
         "is-ci": "^1.1.0"
