--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
   - yarn report-coverage
 after_script: greenkeeper-lockfile-upload
 deploy:
+  skip_cleanup: true
   provider: npm
   email: li0liq@gmail.com
   api_key: $NPM_TOKEN
