--- a/package.json
+++ b/package.json
@@ -40,30 +40,30 @@
         "@types/chalk": "^2.2.0",
         "@types/commander": "^2.12.2",
         "@types/debug": "^0.0.30",
-        "@types/jest": "^23.3.1",
-        "@types/node": "^10.5.5",
+        "@types/jest": "^23.3.2",
+        "@types/node": "^10.9.4",
         "coveralls": "^3.0.2",
         "cross-env": "^5.2.0",
-        "fuse-box": "^3.4.0",
+        "fuse-box": "^3.5.0",
         "fuse-box-typechecker": "^2.10.0",
-        "jest": "^23.4.2",
-        "prettier": "^1.14.0",
-        "ts-jest": "^23.0.0",
-        "ts-node": "^7.0.0",
+        "jest": "^23.5.0",
+        "prettier": "^1.14.2",
+        "ts-jest": "^23.1.4",
+        "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
-        "tslint-config-airbnb": "^5.9.2",
-        "tslint-config-prettier": "^1.14.0",
+        "tslint-config-airbnb": "^5.11.0",
+        "tslint-config-prettier": "^1.15.0",
         "tslint-plugin-prettier": "^1.3.0",
-        "typescript": "^3.0.1"
+        "typescript": "^3.0.3"
     },
     "dependencies": {
-        "@babel/parser": "^7.0.0-beta.55",
+        "@babel/parser": "^7.0.0",
         "babylon-walk": "^1.0.2",
         "chalk": "^2.4.1",
-        "commander": "^2.16.0",
-        "cosmiconfig": "^5.0.5",
+        "commander": "^2.18.0",
+        "cosmiconfig": "^5.0.6",
         "debug": "^3.1.0",
-        "is-ci": "^1.1.0",
+        "is-ci": "^1.2.1",
         "xml-escape": "^1.1.0"
     },
     "engines": {
