--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@types/debug": "^0.0.30",
         "@types/jest": "^23.3.2",
         "@types/node": "^10.9.4",
+        "@types/resolve-from": "^0.0.18",
         "coveralls": "^3.0.2",
         "cross-env": "^5.2.0",
         "fuse-box": "^3.5.0",
@@ -64,6 +65,7 @@
         "cosmiconfig": "^5.0.6",
         "debug": "^3.1.0",
         "is-ci": "^1.2.1",
+        "resolve-from": "^4.0.0",
         "xml-escape": "^1.1.0"
     },
     "engines": {
