--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
         "@types/babel-types": "^7.0.4",
         "@types/babylon-walk": "^3.10.1",
         "@types/chalk": "^2.2.0",
-        "@types/commander": "^2.12.2",
         "@types/debug": "^0.0.30",
         "@types/jest": "^23.3.2",
         "@types/node": "^10.9.4",
         "@types/resolve-from": "^0.0.18",
+        "@types/yargs": "^11.1.1",
         "coveralls": "^3.0.2",
         "cross-env": "^5.2.0",
         "fuse-box": "^3.5.0",
@@ -61,12 +61,12 @@
         "@babel/parser": "^7.0.0",
         "babylon-walk": "^1.0.2",
         "chalk": "^2.4.1",
-        "commander": "^2.18.0",
         "cosmiconfig": "^5.0.6",
         "debug": "^3.1.0",
         "is-ci": "^1.2.1",
         "resolve-from": "^4.0.0",
-        "xml-escape": "^1.1.0"
+        "xml-escape": "^1.1.0",
+        "yargs": "^12.0.2"
     },
     "engines": {
         "node": ">=8.9.0"
