--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
         "bin"
     ],
     "main": "./lib/index.js",
+    "module": "./lib/index.es.js",
     "bin": {
         "stricter": "./bin/cli.js"
     },
     "scripts": {
-        "start": "node fuse.js",
-        "build": "cross-env NODE_ENV=production node fuse.js",
+        "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
+        "watch": "rollup -c rollup.config.js -w",
         "lint": "tslint --project .",
         "test": "jest",
         "report-coverage": "coveralls < coverage/lcov.info"
@@ -35,6 +36,9 @@
     },
     "homepage": "https://github.com/stricter/stricter#readme",
     "devDependencies": {
+        "@babel/core": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-typescript": "^7.0.0",
         "@types/babel-types": "^7.0.4",
         "@types/babylon-walk": "^3.10.1",
         "@types/chalk": "^2.2.0",
@@ -43,13 +47,17 @@
         "@types/node": "^10.9.4",
         "@types/resolve-from": "^0.0.18",
         "@types/yargs": "^11.1.1",
+        "babel-core": "^7.0.0-0",
+        "babel-jest": "^23.6.0",
         "coveralls": "^3.0.2",
         "cross-env": "^5.2.0",
-        "fuse-box": "^3.5.0",
-        "fuse-box-typechecker": "^2.10.0",
         "jest": "^23.6.0",
         "prettier": "^1.14.2",
-        "ts-jest": "^23.1.4",
+        "rollup": "^0.65.2",
+        "rollup-plugin-auto-external": "^2.0.0",
+        "rollup-plugin-babel": "^4.0.3",
+        "rollup-plugin-node-resolve": "^3.4.0",
+        "rollup-plugin-replace": "^2.0.0",
         "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
         "tslint-config-airbnb": "^5.11.0",
