--- a/package.json
+++ b/package.json
@@ -36,10 +36,14 @@
     },
     "homepage": "https://github.com/stricter/stricter#readme",
     "devDependencies": {
-        "@babel/core": "^7.0.0",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-typescript": "^7.0.0",
         "@types/babel-types": "^7.0.4",
+        "@types/babel__core": "^7.0.1",
+        "@types/babel__generator": "^7.0.0",
+        "@types/babel__parser": "^7.0.0",
+        "@types/babel__template": "^7.0.0",
+        "@types/babel__traverse": "^7.0.0",
         "@types/babylon-walk": "^3.10.1",
         "@types/chalk": "^2.2.0",
         "@types/debug": "^0.0.30",
@@ -66,6 +70,7 @@
         "typescript": "^3.0.3"
     },
     "dependencies": {
+        "@babel/core": "^7.0.0",
         "@babel/parser": "^7.0.0",
         "babylon-walk": "^1.0.2",
         "chalk": "^2.4.1",
