Split rule resolver into multiple files, add unit tests, add explicit typecheck in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 before_script: greenkeeper-lockfile-update
 script:
   - yarn lint
+  - yarn typecheck
   - yarn build
   - yarn test
   - yarn report-coverage
