--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
         "watch": "rollup -c rollup.config.js -w",
         "lint": "tslint --project .",
+        "typecheck": "tsc --noEmit",
+        "all": "concurrently npm:build npm:lint npm:typecheck -c green,yellow,blue",
         "test": "jest",
         "report-coverage": "coveralls < coverage/lcov.info"
     },
@@ -53,6 +55,7 @@
         "@types/yargs": "^11.1.1",
         "babel-core": "^7.0.0-0",
         "babel-jest": "^23.6.0",
+        "concurrently": "^4.0.1",
         "coveralls": "^3.0.2",
         "cross-env": "^5.2.0",
         "jest": "^23.6.0",
