--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
         "@types/jest": "^23.3.2",
         "@types/node": "^10.9.4",
         "@types/resolve-from": "^0.0.18",
+        "@types/rimraf": "^2.0.2",
+        "@types/xxhashjs": "^0.1.1",
         "@types/yargs": "^11.1.1",
         "babel-core": "^7.0.0-0",
         "babel-jest": "^23.6.0",
@@ -79,9 +81,13 @@
         "chalk": "^2.4.1",
         "cosmiconfig": "^5.0.6",
         "debug": "^3.1.0",
+        "file-system-cache": "^1.0.5",
+        "find-cache-dir": "^2.0.0",
         "is-ci": "^1.2.1",
         "resolve-from": "^4.0.0",
+        "rimraf": "^2.6.2",
         "xml-escape": "^1.1.0",
+        "xxhashjs": "^0.2.2",
         "yargs": "^12.0.2"
     },
     "engines": {
