--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/babylon-walk": "^3.10.1",
         "@types/chalk": "^2.2.0",
         "@types/debug": "^0.0.30",
+        "@types/graphlib": "^2.1.4",
         "@types/jest": "^23.3.2",
         "@types/node": "^10.9.4",
         "@types/resolve-from": "^0.0.18",
@@ -83,6 +84,8 @@
         "debug": "^4.0.1",
         "file-system-cache": "^1.0.5",
         "find-cache-dir": "^2.0.0",
+        "graphlib": "^2.1.5",
+        "graphlib-dot": "^0.6.2",
         "is-ci": "^1.2.1",
         "resolve-from": "^4.0.0",
         "rimraf": "^2.6.2",
