--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "devDependencies": {
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-typescript": "^7.0.0",
+        "@types/app-root-path": "^1.2.4",
         "@types/babel-types": "^7.0.4",
         "@types/babel__core": "^7.0.1",
         "@types/babel__generator": "^7.0.0",
@@ -78,9 +79,9 @@
     "dependencies": {
         "@babel/core": "^7.0.1",
         "@babel/parser": "^7.0.0",
+        "app-root-path": "^2.1.0",
         "babylon-walk": "^1.0.2",
         "chalk": "^2.4.1",
-        "cosmiconfig": "^5.0.6",
         "debug": "^4.0.1",
         "file-system-cache": "^1.0.5",
         "find-cache-dir": "^2.0.0",
