--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "allowJs": false,
+        "declaration": true,
+        "declarationDir": "./lib",
         "isolatedModules": false,
         "jsx": "react",
         "lib": ["esnext"],
-        "declaration": true,
         "noEmitOnError": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitThis": true,
