--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_script: greenkeeper-lockfile-update
 script:
   - yarn lint
   - yarn typecheck
-  - yarn build
+  - yarn build:main
+  - yarn build:types
   - yarn test
   - yarn report-coverage
 after_script: greenkeeper-lockfile-upload
