--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,7 @@ before_install:
   - yarn global add greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 script:
-  - yarn lint
-  - yarn typecheck
-  - yarn build:main
-  - yarn build:types
+  - yarn all
   - yarn test
   - yarn report-coverage
 after_script: greenkeeper-lockfile-upload
