--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
         "watch": "rollup -c rollup.config.js -w",
         "lint": "tslint --project .",
         "typecheck": "tsc --noEmit",
-        "build:types": "tsc --emitDeclarationOnly",
-        "all": "concurrently npm:build:main npm:build:types npm:lint npm:typecheck -c green,yellow,blue",
+        "build:types": "tsc --emitDeclarationOnly --declarationDir lib --declaration",
+        "generate:schema": "typescript-json-schema tsconfig.json Config --include src/types/* --out src/config/config-schema.json --noExtraProps --required",
+        "all": "yarn generate:schema && concurrently npm:build:main npm:build:types npm:lint npm:typecheck -c green,yellow,blue",
         "test": "jest",
         "report-coverage": "coveralls < coverage/lcov.info"
     },
@@ -65,21 +66,24 @@
         "cross-env": "^5.2.0",
         "jest": "^23.6.0",
         "prettier": "^1.14.2",
-        "rollup": "^0.65.2",
+        "rollup": "^0.66.0",
         "rollup-plugin-auto-external": "^2.0.0",
         "rollup-plugin-babel": "^4.0.3",
+        "rollup-plugin-json": "^3.1.0",
         "rollup-plugin-node-resolve": "^3.4.0",
         "rollup-plugin-replace": "^2.0.0",
         "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
         "tslint-config-airbnb": "^5.11.0",
         "tslint-config-prettier": "^1.15.0",
-        "tslint-plugin-prettier": "^1.3.0",
-        "typescript": "^3.0.3"
+        "tslint-plugin-prettier": "^2.0.0",
+        "typescript": "^3.0.3",
+        "typescript-json-schema": "^0.32.0"
     },
     "dependencies": {
         "@babel/core": "^7.0.1",
         "@babel/parser": "^7.0.0",
+        "ajv": "^6.5.3",
         "app-root-path": "^2.1.0",
         "babylon-walk": "^1.0.2",
         "chalk": "^2.4.1",
