--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "lint": "tslint --project .",
         "typecheck": "tsc --noEmit",
         "build:types": "tsc --emitDeclarationOnly --declarationDir lib --declaration",
-        "generate:schema": "typescript-json-schema tsconfig.json Config --include src/types/* --out src/config/config-schema.json --noExtraProps --required",
+        "generate:schema": "typescript-json-schema tsconfig.json ConfigAPI --include src/types/* --out src/config/config-schema.json --noExtraProps --required --useTypeOfKeyword",
         "all": "yarn generate:schema && concurrently npm:build:main npm:build:types npm:lint npm:typecheck -c green,yellow,blue",
         "test": "jest",
         "report-coverage": "coveralls < coverage/lcov.info"
@@ -86,11 +86,13 @@
         "babylon-walk": "^1.0.2",
         "chalk": "^2.4.2",
         "debug": "^4.1.1",
+        "fast-glob": "^2.2.6",
         "file-system-cache": "^1.0.5",
         "find-cache-dir": "^3.0.0",
         "graphlib": "^2.1.7",
         "graphlib-dot": "^0.6.2",
         "is-ci": "^2.0.0",
+        "read-pkg-up": "^6.0.0",
         "resolve-from": "^5.0.0",
         "rimraf": "^2.6.3",
         "xml-escape": "^1.1.0",
