Better packages support (#67)
* Move rules function API from rules field to each rule usage

It is more flexible for each rule to be able to be configured as a
function rather than relying on the `rules` field itself to be one. In
particular, this makes it easier to use third party shareable configs
that rely on rule functions for package-level rules.

This additionally moves the rules function processing to a
pre-processing step so that the resulting rule usages can be validated.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "lint": "tslint --project .",
         "typecheck": "tsc --noEmit",
         "build:types": "tsc --emitDeclarationOnly --declarationDir lib --declaration",
-        "generate:schema": "typescript-json-schema tsconfig.json ConfigAPI --include src/types/* --out src/config/config-schema.json --noExtraProps --required --useTypeOfKeyword",
+        "generate:schema": "typescript-json-schema tsconfig.json Config --include src/types/* --out src/config/config-schema.json --noExtraProps --required --useTypeOfKeyword",
         "all": "yarn generate:schema && concurrently npm:build:main npm:build:types npm:lint npm:typecheck -c green,yellow,blue",
         "test": "jest",
         "report-coverage": "coveralls < coverage/lcov.info"
