Add possibility to exclude folders from folder level cyclic deps (#63)
* Add possibility to exclude folders from folder level cyclic dependencies, add tests
* Add informations about new config option
* Registries are glob, fixing nested cyclic dependencies checks when registries are present, adding check for registries types
* Setting default name of nodes, adding tests, including common root in error message
* Update changelog

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@types/debug": "^4.1.4",
         "@types/graphlib": "^2.1.4",
         "@types/jest": "^24.0.12",
+        "@types/micromatch": "^3.1.0",
         "@types/node": "^11.13.8",
         "@types/resolve-from": "^5.0.1",
         "@types/rimraf": "^2.0.2",
@@ -92,6 +93,7 @@
         "graphlib": "^2.1.7",
         "graphlib-dot": "^0.6.2",
         "is-ci": "^2.0.0",
+        "micromatch": "^4.0.2",
         "read-pkg-up": "^6.0.0",
         "resolve-from": "^5.0.0",
         "rimraf": "^2.6.3",
