Migrate to using enhanced-resolve. Fixes #86.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "stricter",
-    "version": "0.3.5",
+    "version": "0.4.0",
     "description": "A project-wide js-linting tool",
     "files": [
         "LICENSE",
@@ -50,11 +50,11 @@
         "@types/babel__traverse": "^7.0.8",
         "@types/chalk": "^2.2.0",
         "@types/debug": "^4.1.5",
+        "@types/enhanced-resolve": "^3.0.6",
         "@types/graphlib": "^2.1.5",
         "@types/jest": "^24.0.25",
         "@types/micromatch": "^4.0.0",
         "@types/node": "^13.1.6",
-        "@types/resolve-from": "^5.0.1",
         "@types/rimraf": "^2.0.3",
         "@types/xxhashjs": "^0.2.1",
         "@types/yargs": "^15.0.0",
@@ -86,6 +86,7 @@
         "app-root-path": "^3.0.0",
         "chalk": "^3.0.0",
         "debug": "^4.1.1",
+        "enhanced-resolve": "^4.1.1",
         "fast-glob": "^3.1.1",
         "file-system-cache": "^1.0.5",
         "find-cache-dir": "^3.2.0",
@@ -93,7 +94,6 @@
         "graphlib-dot": "^0.6.4",
         "is-ci": "^2.0.0",
         "micromatch": "^4.0.2",
-        "resolve-from": "^5.0.0",
         "rimraf": "^3.0.0",
         "xml-escape": "^1.1.0",
         "xxhashjs": "^0.2.2",
