--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
         "@types/debug": "^4.1.5",
         "@types/enhanced-resolve": "^3.0.6",
         "@types/graphlib": "^2.1.5",
-        "@types/jest": "^24.0.25",
+        "@types/jest": "^24.9.0",
         "@types/micromatch": "^4.0.0",
-        "@types/node": "^13.1.6",
+        "@types/node": "^13.1.8",
         "@types/rimraf": "^2.0.3",
         "@types/xxhashjs": "^0.2.1",
         "@types/yargs": "^15.0.0",
@@ -63,6 +63,7 @@
         "coveralls": "^3.0.9",
         "cross-env": "^6.0.3",
         "jest": "^24.9.0",
+        "jest-circus": "^24.9.0",
         "prettier": "^1.19.1",
         "rollup": "^1.29.0",
         "rollup-plugin-auto-external": "^2.0.0",
@@ -75,14 +76,14 @@
         "tslint-config-airbnb": "^5.11.2",
         "tslint-config-prettier": "^1.18.0",
         "tslint-plugin-prettier": "^2.1.0",
-        "typescript": "^3.7.4",
+        "typescript": "^3.7.5",
         "typescript-json-schema": "^0.42.0"
     },
     "dependencies": {
         "@babel/core": "^7.8.3",
         "@babel/parser": "^7.8.3",
         "@wojtekmaj/babylon-walk": "2.0.0",
-        "ajv": "^6.10.2",
+        "ajv": "^6.11.0",
         "app-root-path": "^3.0.0",
         "chalk": "^3.0.0",
         "debug": "^4.1.1",
