Switch to using eslint

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "scripts": {
         "build:main": "cross-env NODE_ENV=production rollup -c rollup.config.js",
         "watch": "rollup -c rollup.config.js -w",
-        "lint": "tslint --project .",
+        "lint": "eslint . --ext .js,.ts --cache",
         "stricter": "stricter",
         "typecheck": "tsc --noEmit",
         "build:types": "tsc --emitDeclarationOnly --declarationDir lib --declaration",
@@ -59,10 +59,15 @@
         "@types/rimraf": "^2.0.3",
         "@types/xxhashjs": "^0.2.1",
         "@types/yargs": "^15.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.7.0",
+        "@typescript-eslint/parser": "^2.18.0",
         "babel-core": "^7.0.0-0",
         "concurrently": "^5.0.2",
         "coveralls": "^3.0.9",
         "cross-env": "^6.0.3",
+        "eslint": "^7.0.0-alpha.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-jest": "^23.6.0",
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "prettier": "^1.19.1",
@@ -74,10 +79,6 @@
         "rollup-plugin-replace": "^2.2.0",
         "stricter": "^0.4.0",
         "ts-node": "^8.6.2",
-        "tslint": "^5.20.1",
-        "tslint-config-airbnb": "^5.11.2",
-        "tslint-config-prettier": "^1.18.0",
-        "tslint-plugin-prettier": "^2.1.0",
         "typescript": "^3.7.5",
         "typescript-json-schema": "^0.42.0"
     },
@@ -90,6 +91,7 @@
         "chalk": "^3.0.0",
         "debug": "^4.1.1",
         "enhanced-resolve": "^4.1.1",
+        "eslint-plugin-prettier": "^3.1.2",
         "fast-glob": "^3.1.1",
         "file-system-cache": "^1.0.5",
         "find-cache-dir": "^3.2.0",
