--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,10 @@
     ],
     "env": {
         "test": {
-            "presets": ["@babel/preset-env", "@babel/preset-typescript"]
+            "presets": [
+                ["@babel/preset-env", {"targets": {"node": "current"}}], 
+                "@babel/preset-typescript"
+            ]
         }
     }
 }
