--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         "alwaysStrict": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "importsNotUsedAsValues": "error"
     },
     "include": ["src/**/*", "types/**/*"],
     "compileOnSave": false,
