Remove unused tslint config, temporary comment out coverage data upload

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script: greenkeeper-lockfile-update
 script:
   - yarn all
   - yarn test
-  - yarn report-coverage
+#  - yarn report-coverage
 after_script: greenkeeper-lockfile-upload
 deploy:
   skip_cleanup: true
