--- a/package.json
+++ b/package.json
@@ -41,52 +41,52 @@
     },
     "homepage": "https://github.com/stricter/stricter#readme",
     "devDependencies": {
-        "@babel/preset-env": "^7.9.5",
-        "@babel/preset-typescript": "^7.9.0",
+        "@babel/preset-env": "^7.10.2",
+        "@babel/preset-typescript": "^7.10.1",
         "@types/app-root-path": "^1.2.4",
         "@types/babel-types": "^7.0.7",
         "@types/babel__core": "^7.1.7",
         "@types/babel__generator": "^7.6.1",
         "@types/babel__template": "^7.0.2",
-        "@types/babel__traverse": "^7.0.10",
+        "@types/babel__traverse": "^7.0.11",
         "@types/chalk": "^2.2.0",
         "@types/debug": "^4.1.5",
         "@types/enhanced-resolve": "^3.0.6",
-        "@types/graphlib": "^2.1.5",
-        "@types/jest": "^25.2.1",
+        "@types/graphlib": "^2.1.6",
+        "@types/jest": "^25.2.3",
         "@types/micromatch": "^4.0.1",
-        "@types/node": "^13.11.1",
+        "@types/node": "^14.0.6",
         "@types/rimraf": "^3.0.0",
-        "@types/xxhashjs": "^0.2.1",
-        "@types/yargs": "^15.0.4",
-        "@typescript-eslint/eslint-plugin": "^2.28.0",
-        "@typescript-eslint/parser": "^2.28.0",
+        "@types/xxhashjs": "^0.2.2",
+        "@types/yargs": "^15.0.5",
+        "@typescript-eslint/eslint-plugin": "^3.0.2",
+        "@typescript-eslint/parser": "^3.0.2",
         "babel-core": "^7.0.0-0",
-        "concurrently": "^5.1.0",
-        "coveralls": "^3.0.11",
+        "concurrently": "^5.2.0",
+        "coveralls": "^3.1.0",
         "cross-env": "^7.0.2",
-        "eslint": "^7.0.0-alpha.3",
-        "eslint-config-prettier": "^6.10.1",
-        "eslint-plugin-jest": "^23.8.2",
-        "jest": "^25.3.0",
-        "jest-circus": "^25.3.0",
-        "prettier": "^2.0.4",
-        "rollup": "^2.6.1",
+        "eslint": "^7.1.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-jest": "^23.13.2",
+        "jest": "^26.0.1",
+        "jest-circus": "^26.0.1",
+        "prettier": "^2.0.5",
+        "rollup": "^2.12.0",
         "rollup-plugin-auto-external": "^2.0.0",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-replace": "^2.2.0",
-        "stricter": "^0.4.1",
-        "ts-node": "^8.8.2",
-        "typescript": "^3.8.3",
+        "stricter": "^0.4.2",
+        "ts-node": "^8.10.2",
+        "typescript": "^3.9.3",
         "typescript-json-schema": "^0.42.0"
     },
     "dependencies": {
-        "@babel/core": "^7.9.0",
-        "@babel/parser": "^7.9.4",
+        "@babel/core": "^7.10.2",
+        "@babel/parser": "^7.10.2",
         "@wojtekmaj/babylon-walk": "2.0.0",
-        "ajv": "^6.12.0",
+        "ajv": "^6.12.2",
         "app-root-path": "^3.0.0",
         "chalk": "^4.0.0",
         "debug": "^4.1.1",
