--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
         "@types/babel__generator": "7.6.1",
         "@types/babel__template": "7.0.2",
         "@types/babel__traverse": "7.0.12",
-        "@types/chalk": "2.2.0",
         "@types/debug": "4.1.5",
         "@types/enhanced-resolve": "3.0.6",
         "@types/graphlib": "2.1.6",
@@ -88,8 +87,8 @@
         "@babel/parser": "^7.10.2",
         "@wojtekmaj/babylon-walk": "2.0.0",
         "ajv": "^6.12.2",
+        "ansi-colors": "^4.1.1",
         "app-root-path": "^3.0.0",
-        "chalk": "^4.0.0",
         "debug": "^4.1.1",
         "enhanced-resolve": "^4.1.1",
         "fast-glob": "^3.2.2",
