--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@types/micromatch": "4.0.1",
         "@types/node": "14.6.4",
         "@types/rimraf": "3.0.0",
+        "@types/wrap-ansi": "^3.0.0",
         "@types/xxhashjs": "0.2.2",
         "@types/yargs": "15.0.5",
         "@typescript-eslint/eslint-plugin": "4.0.1",
@@ -99,6 +100,7 @@
         "is-ci": "^2.0.0",
         "micromatch": "^4.0.2",
         "rimraf": "^3.0.2",
+        "wrap-ansi": "^7.0.0",
         "xml-escape": "^1.1.0",
         "xxhashjs": "^0.2.2",
         "yargs": "^15.3.1"
